--- a/product-grid-item.liquid
+++ b/product-grid-item.liquid
@@ -1,4 +1,4 @@
-// copy and paste code into product-grid-item.liquid file under Assets in shopify
+// delete everything in the file then copy and paste code into product-grid-item.liquid file under Assets in shopify
 {% unless grid_item_width %}
   {% assign grid_item_width = 'large--one-third medium--one-half' %}
 {% endunless %}
